add imgs and icon

--- a/index.html
+++ b/index.html
@@ -6,84 +6,192 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Zoom</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!-- Google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
     </head>
     <body>
         <!-- main with videocall cards -->
         <main class="container">
-            <div class="speaker-view position"></div>
-            <div class="full-screen position"></div>
+            <div class="buttons position">
+                <button class="speaker-view"><i class="fa-solid fa-grip"></i> Speaker View</button>
+                <button class="full-screen"><i class="fa-solid fa-maximize"></i></button>
+            </div>
             <section class="cards flex">
-                <article class="card"></article>
-                <article class="card"></article>
-                <article class="card"></article>
-                <article class="card"></article>
-                <article class="card"></article>
-                <article class="card"></article>
-                <article class="card"></article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
             </section>
-                <section class="cards flex">
-                    <article class="card"></article>
-                    <article class="card"></article>
-                    <article class="card"></article>
-                    <article class="card"></article>
-                    <article class="card"></article>
-                    <article class="card"></article>
-                    <article class="card"></article>
-                </section>
-                <section class="cards flex">
-                    <article class="card"></article>
-                    <article class="card"></article>
-                    <article class="card"></article>
-                    <article class="card"></article>
-                    <article class="card"></article>
-                    <article class="card"></article>
-                    <article class="card"></article>
-                </section>
-                <section class="cards flex">
-                    <article class="card"></article>
-                    <article class="card"></article>
-                    <article class="card"></article>
-                    <article class="card"></article>
-                    <article class="card"></article>
-                    <article class="card"></article>
-                    <article class="card"></article>
-                </section>
-                <section class="cards flex">
-                    <article class="card"></article>
-                    <article class="card"></article>
-                    <article class="card"></article>
-                    <article class="card"></article>
-                    <article class="card"></article>
-                    <article class="card"></article>
-                    <article class="card"></article>
-                </section>
+            <section class="cards flex">
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+            </section>
+            <section class="cards flex">
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+            </section>
+            <section class="cards flex">
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+            </section>
+            <section class="cards flex">
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+                <article class="card">
+                    <div class="mute-mic position"><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</div>
+                    <img src="https://picsum.photos/200" alt="Random img">
+                </article>
+            </section>
         </main>
         <!-- BOTTOM HEADER -->
         <header>
             <nav class="header-nav flex">
                 <section class="mic-video">
                     <ul>
-                        <li>mute</li>
-                        <li>^</li>
-                        <li>Stop video</li>
-                        <li>^</li>
+                        <li><i class="fa-solid fa-microphone"></i><span>Mute</span></li>
+                        <li class="arrow">&#94;</li>
+                        <li><i class="fa-solid fa-video"></i><span>Stop Video</span></li>
+                        <li class="arrow">&#94;</li>
                     </ul>
                 </section>
                 <section class="interactions">
                     <ul>
-                        <li>Invite</li>
-                        <li>Manage partecipants</li>
-                        <li>polling</li>
-                        <li>Share screen</li>
-                        <li>^</li>
-                        <li>chat</li>
-                        <li>Record</li>
-                        <li>Breakout Rooms</li>
-                        <li>More</li>
+                        <li><i class="fa-solid fa-user-plus"></i><span>Invite</span></li>
+                        <li><i class="fa-solid fa-user-group"></i><span>Manage Partecipants</span></li>
+                        <li><i class="fa-solid fa-chart-column"></i><span>Polling</span></li>
+                        <li><i class="fa-solid fa-microphone color-green"></i><span>Mute</span></li>
+                        <li class="arrow">&#94;</li>
+                        <li><i class="fa-solid fa-comment"></i><span>Chat</span></li>
+                        <li><i class="fa-solid fa-record-vinyl"></i><span>Record</span></li>
+                        <li><i class="fa-brands fa-microsoft"></i><span>Breakout Room</span></li>
+                        <li><i class="fa-solid fa-ellipsis"></i><span>More</span></li>
                     </ul>
                 </section>
                 <section class="end-meeting">
