add end meeting button

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         <li><i class="fa-solid fa-user-plus"></i><span>Invite</span></li>
                         <li><i class="fa-solid fa-user-group"></i><span>Manage Partecipants</span></li>
                         <li><i class="fa-solid fa-chart-column"></i><span>Polling</span></li>
-                        <li><i class="fa-solid fa-microphone color-green"></i><span>Mute</span></li>
+                        <li><i class="fa-solid fa-share-from-square color-green"></i></i><span>Share Screen</span></li>
                         <li class="arrow">&#94;</li>
                         <li><i class="fa-solid fa-comment"></i><span>Chat</span></li>
                         <li><i class="fa-solid fa-record-vinyl"></i><span>Record</span></li>
@@ -186,8 +186,8 @@
                         <li><i class="fa-solid fa-ellipsis"></i><span>More</span></li>
                     </ul>
                 </section>
-                <section class="end-meeting">
-                    End end-meeting
+                <section class="close">
+                    <button class="end-meeting">End Meeting</button>
                 </section>
             </nav>
         </header>
